# slooze-eats

./: .gitignore
backend/: pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/models/: order.py  payment.py  restaurant.py  user.py
backend/app/routes/: auth.py  orders.py  payments.py  restaurants.py
backend/app/schemas/: auth.py  order.py  payment.py  restaurant.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cart/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/orders/: page.tsx
frontend/app/payments/: page.tsx
frontend/app/restaurants/: page.tsx
frontend/app/restaurants/[id]/: page.tsx
frontend/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts  types.ts
